--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,7 +11,7 @@
           "dest": "./index.js",
           "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
           "headers": {
-            "Access-Control-Allow-Origin": "https://cinemalk.vercel.app"
+            "Access-Control-Allow-Origin": "*"
           }
         }
       ]
