--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,10 +8,11 @@
     "routes": [
         {
           "src": "/(.*)",
-          "dest": "./server.js",
+          "dest": "server.js",
           "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
           "headers": {
-            "Access-Control-Allow-Origin": "*"
+            "Access-Control-Allow-Origin": "https://cinemalk.vercel.app",
+            "Access-Control-Allow-Credentials": "true"
           }
         }
       ]
