--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "nodemon server.js",
     "start": "nodemon server.js"
     
   },
